# quanto-cpu

./: .devcontainer.json  dev-cpu.Dockerfile  dev-gpu.Dockerfile  pyproject.toml  setup.py
bench/generation/: evaluate_model.py  latency.py  perplexity.py  prediction.py
bench/kernels/: test_int_mm.py
examples/nlp/text-generation/: quantize_causal_lm_model.py
quanto/tensor/: ops.py
test_mehmet/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test_blass_int8  test_blass_int8.cpp  test_int_mm.py  test_int_mm_cpu.py  test_linear.py  test_torch_compile.py  test_torch_compile_perf.py  test_torch_int8_mm.cpp
test_mehmet/KERNELS/: Makefile  cmake_install.cmake
test_mehmet/SAMPLES/: Makefile  cmake_install.cmake
